--- a/neural network.ipynb
+++ b/neural network.ipynb
@@ -1499,7 +1499,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1fdcd0fa278>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2b43b0eff98>"
       ]
      },
      "execution_count": 3,
@@ -1543,8 +1543,8 @@
      "output_type": "stream",
      "text": [
       "[[0.25       0.         0.08333333 ... 0.         0.00817439 0.01467269]\n",
-      " [0.25       0.08333333 0.08333333 ... 0.         0.02179837 0.03611738]\n",
-      " [0.25       0.08333333 0.08333333 ... 0.         0.01362398 0.03047404]\n",
+      " [0.25       0.         0.08333333 ... 0.         0.02179837 0.03611738]\n",
+      " [0.25       0.         0.08333333 ... 0.         0.01362398 0.03047404]\n",
       " ...\n",
       " [0.25       1.         1.         ... 0.19301751 0.01907357 0.09367946]\n",
       " [0.25       1.         1.         ... 0.15786999 0.03542234 0.05417607]\n",
@@ -1555,7 +1555,7 @@
    "source": [
     "#X = np.array(([[4.5,6.7,8.9],[9.1,7.6,6.5],[8.7,6.5,7.0]]),dtype=float)\n",
     "#Y = np.array(([[89,90],[80,70],[69,89]]),dtype=float)\n",
-    "X[1:,1] = X[1:,2]\n",
+    "\n",
     "Xn = X\n",
     "\n",
     "for cont in range(14):\n",
@@ -1594,7 +1594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1687,12 +1687,13 @@
     "            \n",
     "            error = self.getError(er)\n",
     "            if error>expError:\n",
-    "                ef = False\n",
+    "                ef = \"False\"\n",
     "            else:\n",
-    "                ef = True\n",
+    "                ef = \"True\"\n",
     "            \n",
-    "            sys.stdout.write(\"\\rRow #%r - Error : %error - Ef: %ef\" % (row , error,ef))\n",
+    "            sys.stdout.write(\"\\rRow #%r - Error : %d - Ef: %s\" % (row , error,ef))\n",
     "            sys.stdout.flush()\n",
+    "            \n",
     "            row=row+1\n",
     "        \n",
     "            \n",
@@ -1703,11 +1704,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nn = NeuralNetwork(14,1,8)"
+    "nn = NeuralNetwork(14,1,15)"
    ]
   },
   {
@@ -1721,15 +1722,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Row #7850 - Error : 3.711482e-01rror - Ef: 1.000000e+00f"
+      "Row #10112 - Error : 0 - Ef: False"
      ]
     }
    ],
    "source": [
-    "expError = 5\n",
+    "expError = .02\n",
+    "error = 10000\n",
     "alpha = 50\n",
     "\n",
-    "nn.trainBP(Xn,Yn,alpha,expError)\n"
+    "while error > expError:\n",
+    "    error = nn.trainBP(Xn,Yn,alpha,expError)\n",
+    "    "
    ]
   }
  ],
@@ -1749,7 +1753,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.0"
   }
  },
  "nbformat": 4,
