--- a/neural network.ipynb
+++ b/neural network.ipynb
@@ -1499,7 +1499,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2b43b0eff98>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x22284a0dfd0>"
       ]
      },
      "execution_count": 3,
@@ -1524,13 +1524,20 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "from numpy import genfromtxt\n",
     "bikes = genfromtxt('hour.csv', delimiter=',')\n",
-    "X = bikes[1:,2:16]\n",
-    "Y = bikes[1:,16:17]\n"
+    "\n",
+    "# np.random.shuffle(bikes)\n",
+    "\n",
+    "Xn = bikes[1:,2:16]\n",
+    "Yn = bikes[1:,16:17]\n",
+    "\n",
+    "# print(X)"
    ]
   },
   {
@@ -1542,13 +1549,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.25       0.         0.08333333 ... 0.         0.00817439 0.01467269]\n",
-      " [0.25       0.         0.08333333 ... 0.         0.02179837 0.03611738]\n",
-      " [0.25       0.         0.08333333 ... 0.         0.01362398 0.03047404]\n",
+      "[[2.000e+00 0.000e+00 4.000e+00 ... 2.537e-01 7.400e+01 3.090e+02]\n",
+      " [1.000e+00 1.000e+00 3.000e+00 ... 1.940e-01 3.000e+00 1.100e+01]\n",
+      " [1.000e+00 0.000e+00 1.000e+00 ... 1.940e-01 2.000e+00 1.900e+01]\n",
       " ...\n",
-      " [0.25       1.         1.         ... 0.19301751 0.01907357 0.09367946]\n",
-      " [0.25       1.         1.         ... 0.15786999 0.03542234 0.05417607]\n",
-      " [0.25       1.         1.         ... 0.15786999 0.03269755 0.04176072]]\n"
+      " [2.000e+00 1.000e+00 5.000e+00 ... 2.239e-01 4.100e+01 2.080e+02]\n",
+      " [1.000e+00 1.000e+00 1.000e+00 ... 1.045e-01 0.000e+00 2.800e+01]\n",
+      " [2.000e+00 0.000e+00 5.000e+00 ... 1.045e-01 0.000e+00 2.800e+01]]\n",
+      "[nan nan nan ... nan nan nan]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\edfmg\\appdata\\local\\programs\\python\\python35\\lib\\site-packages\\numpy\\core\\_methods.py:26: RuntimeWarning: invalid value encountered in reduce\n",
+      "  return umr_maximum(a, axis, None, out, keepdims)\n"
      ]
     }
    ],
@@ -1557,6 +1573,7 @@
     "#Y = np.array(([[89,90],[80,70],[69,89]]),dtype=float)\n",
     "\n",
     "Xn = X\n",
+    "\n",
     "\n",
     "for cont in range(14):\n",
     "    Xn[:,cont] = (Xn[:,cont]/(Xn[:,cont].max()))\n",
@@ -1568,25 +1585,28 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Y' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-7a70064ec803>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mYn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mY\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mY\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'Y' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "Yn = Y/Y.max()"
+    "# Yn = Y/Y.max()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Xn: \n",
-      "17379\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Xn: \")\n",
     "print(len(Xn))\n"
@@ -1594,7 +1614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1691,10 +1711,12 @@
     "            else:\n",
     "                ef = \"True\"\n",
     "            \n",
-    "            sys.stdout.write(\"\\rRow #%r - Error : %d - Ef: %s\" % (row , error,ef))\n",
+    "            sys.stdout.write(\"\\rRow #%r - Error : %f - Ef: %s\" % (row , error, ef))\n",
     "            sys.stdout.flush()\n",
     "            \n",
     "            row=row+1\n",
+    "            \n",
+    "        return error\n",
     "        \n",
     "            \n",
     "    def getError(self,er):\n",
@@ -1704,11 +1726,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nn = NeuralNetwork(14,1,15)"
+    "nn = NeuralNetwork(14,1,6)"
    ]
   },
   {
@@ -1717,21 +1739,14 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Row #10112 - Error : 0 - Ef: False"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "expError = .02\n",
     "error = 10000\n",
-    "alpha = 50\n",
+    "alpha = 0.5\n",
     "\n",
     "while error > expError:\n",
+    "    nn.error = []\n",
     "    error = nn.trainBP(Xn,Yn,alpha,expError)\n",
     "    "
    ]
