--- a/Challenge 1/neural network.ipynb
+++ b/Challenge 1/neural network.ipynb
@@ -1499,7 +1499,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x22284a0dfd0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1923916df98>"
       ]
      },
      "execution_count": 3,
@@ -1527,17 +1527,31 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.      0.      1.     ...  0.      3.     13.    ]\n",
+      " [ 1.      0.      1.     ...  0.      8.     32.    ]\n",
+      " [ 1.      0.      1.     ...  0.      5.     27.    ]\n",
+      " ...\n",
+      " [ 1.      1.     12.     ...  0.1642  7.     83.    ]\n",
+      " [ 1.      1.     12.     ...  0.1343 13.     48.    ]\n",
+      " [ 1.      1.     12.     ...  0.1343 12.     37.    ]]\n"
+     ]
+    }
+   ],
    "source": [
     "from numpy import genfromtxt\n",
     "bikes = genfromtxt('hour.csv', delimiter=',')\n",
     "\n",
     "# np.random.shuffle(bikes)\n",
     "\n",
-    "Xn = bikes[1:,2:16]\n",
-    "Yn = bikes[1:,16:17]\n",
+    "X = bikes[1:,2:16]\n",
+    "Y = bikes[1:,16:17]\n",
     "\n",
-    "# print(X)"
+    "print(X)"
    ]
   },
   {
@@ -1549,22 +1563,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[2.000e+00 0.000e+00 4.000e+00 ... 2.537e-01 7.400e+01 3.090e+02]\n",
-      " [1.000e+00 1.000e+00 3.000e+00 ... 1.940e-01 3.000e+00 1.100e+01]\n",
-      " [1.000e+00 0.000e+00 1.000e+00 ... 1.940e-01 2.000e+00 1.900e+01]\n",
+      "[[0.25       0.         0.08333333 ... 0.         0.00817439 0.01467269]\n",
+      " [0.25       0.         0.08333333 ... 0.         0.02179837 0.03611738]\n",
+      " [0.25       0.         0.08333333 ... 0.         0.01362398 0.03047404]\n",
       " ...\n",
-      " [2.000e+00 1.000e+00 5.000e+00 ... 2.239e-01 4.100e+01 2.080e+02]\n",
-      " [1.000e+00 1.000e+00 1.000e+00 ... 1.045e-01 0.000e+00 2.800e+01]\n",
-      " [2.000e+00 0.000e+00 5.000e+00 ... 1.045e-01 0.000e+00 2.800e+01]]\n",
-      "[nan nan nan ... nan nan nan]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\edfmg\\appdata\\local\\programs\\python\\python35\\lib\\site-packages\\numpy\\core\\_methods.py:26: RuntimeWarning: invalid value encountered in reduce\n",
-      "  return umr_maximum(a, axis, None, out, keepdims)\n"
+      " [0.25       1.         1.         ... 0.19301751 0.01907357 0.09367946]\n",
+      " [0.25       1.         1.         ... 0.15786999 0.03542234 0.05417607]\n",
+      " [0.25       1.         1.         ... 0.15786999 0.03269755 0.04176072]]\n"
      ]
     }
    ],
@@ -1585,28 +1590,25 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'Y' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-7a70064ec803>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mYn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mY\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mY\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'Y' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Yn = Y/Y.max()"
+    "Yn = Y/Y.max()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Xn: \n",
+      "17379\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Xn: \")\n",
     "print(len(Xn))\n"
@@ -1614,7 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1707,11 +1709,11 @@
     "            \n",
     "            error = self.getError(er)\n",
     "            if error>expError:\n",
-    "                ef = \"False\"\n",
+    "                ef = False\n",
     "            else:\n",
-    "                ef = \"True\"\n",
+    "                ef = True\n",
     "            \n",
-    "            sys.stdout.write(\"\\rRow #%r - Error : %f - Ef: %s\" % (row , error, ef))\n",
+    "            sys.stdout.write(\"\\rRow #%r - Error : %f - Ef: %d\" % (row , error, ef))\n",
     "            sys.stdout.flush()\n",
     "            \n",
     "            row=row+1\n",
@@ -1726,7 +1728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1739,7 +1741,15 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Row #12640 - Error : 0.358718 - Ef: 0"
+     ]
+    }
+   ],
    "source": [
     "expError = .02\n",
     "error = 10000\n",
