--- a/Keras/Challenge 1 - Keras.ipynb
+++ b/Keras/Challenge 1 - Keras.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import keras\n",
     "from keras.models import Sequential\n",
@@ -17,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,22 +58,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# create model\n",
     "\n",
     "model = Sequential()\n",
-    "model.add(Dense(12, input_dim=6, activation='relu'))\n",
-    "model.add(Dense(12, activation='relu'))\n",
+    "model.add(Dense(6, input_dim=6, activation='relu'))\n",
+    "model.add(Dense(8, activation='relu'))\n",
     "model.add(Dense(1, activation='sigmoid'))\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -85,34 +93,34 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "100/100 [==============================] - 1s 8ms/step - loss: 0.3822 - acc: 5.7541e-05\n",
+      "17379/17379 [==============================] - 1s 61us/step - loss: 3.1002 - acc: 5.7541e-05\n",
       "Epoch 2/10\n",
-      "100/100 [==============================] - 1s 8ms/step - loss: 0.3824 - acc: 5.7541e-05\n",
+      "17379/17379 [==============================] - 1s 36us/step - loss: 0.4657 - acc: 5.7541e-05\n",
       "Epoch 3/10\n",
-      "100/100 [==============================] - 1s 8ms/step - loss: 0.3822 - acc: 5.7541e-05\n",
+      "17379/17379 [==============================] - 1s 36us/step - loss: 0.4270 - acc: 5.7541e-05\n",
       "Epoch 4/10\n",
-      "100/100 [==============================] - 1s 8ms/step - loss: 0.3824 - acc: 5.7541e-05\n",
+      "17379/17379 [==============================] - 1s 35us/step - loss: 0.4130 - acc: 5.7541e-05\n",
       "Epoch 5/10\n",
-      "100/100 [==============================] - 1s 8ms/step - loss: 0.3824 - acc: 5.7541e-05\n",
+      "17379/17379 [==============================] - 1s 35us/step - loss: 0.4057 - acc: 5.7541e-05\n",
       "Epoch 6/10\n",
-      "100/100 [==============================] - 1s 8ms/step - loss: 0.3821 - acc: 5.7541e-05\n",
+      "17379/17379 [==============================] - 1s 36us/step - loss: 0.4004 - acc: 5.7541e-05\n",
       "Epoch 7/10\n",
-      "100/100 [==============================] - 1s 8ms/step - loss: 0.3824 - acc: 5.7541e-05\n",
+      "17379/17379 [==============================] - 1s 36us/step - loss: 0.3945 - acc: 5.7541e-05\n",
       "Epoch 8/10\n",
-      "100/100 [==============================] - 1s 8ms/step - loss: 0.3821 - acc: 5.7541e-05\n",
+      "17379/17379 [==============================] - 1s 35us/step - loss: 0.3851 - acc: 5.7541e-05\n",
       "Epoch 9/10\n",
-      "100/100 [==============================] - 1s 8ms/step - loss: 0.3824 - acc: 5.7541e-05\n",
+      "17379/17379 [==============================] - 1s 36us/step - loss: 0.3840 - acc: 5.7541e-05\n",
       "Epoch 10/10\n",
-      "100/100 [==============================] - 1s 8ms/step - loss: 0.3823 - acc: 5.7541e-05\n"
+      "17379/17379 [==============================] - 1s 36us/step - loss: 0.3840 - acc: 5.7541e-05\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x27b0f2cbcc0>"
+       "<keras.callbacks.History at 0x26f2879e7f0>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,28 +130,28 @@
     "model.fit(X,\n",
     "          Y,\n",
     "          epochs=10,\n",
-    "         steps_per_epoch=100,\n",
+    "         \n",
     "         shuffle=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.01456499],\n",
-       "       [0.03827602],\n",
-       "       [0.02998185],\n",
+       "array([[0.02884732],\n",
+       "       [0.04560821],\n",
+       "       [0.04049164],\n",
        "       ...,\n",
-       "       [0.08748421],\n",
-       "       [0.06069864],\n",
-       "       [0.05392118]], dtype=float32)"
+       "       [0.10675851],\n",
+       "       [0.05999643],\n",
+       "       [0.0476555 ]], dtype=float32)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +194,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
