--- a/Keras/iMotions  ML - Keras - copia.ipynb
+++ b/Keras/iMotions  ML - Keras - copia.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import keras\n",
     "from keras.models import Sequential\n",
@@ -23,17 +31,51 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-9.40000e-01 -1.03000e+00 -1.14000e+00 ...  1.06103e+03  6.60000e+01\n",
+      "   9.40000e-01]\n",
+      " [-9.40000e-01 -1.03000e+00 -1.14000e+00 ...  1.06103e+03  6.60000e+01\n",
+      "   9.40000e-01]\n",
+      " [-9.40000e-01 -1.03000e+00 -1.14000e+00 ...  1.06257e+03  6.60000e+01\n",
+      "   9.40000e-01]\n",
+      " ...\n",
+      " [-6.70000e-01 -8.60000e-01 -7.00000e-01 ...  1.76967e+03  6.40000e+01\n",
+      "   5.70000e-01]\n",
+      " [-6.70000e-01 -8.60000e-01 -7.00000e-01 ...  1.76825e+03  6.40000e+01\n",
+      "   5.70000e-01]\n",
+      " [-6.70000e-01 -8.60000e-01 -7.00000e-01 ...  1.76967e+03  6.40000e+01\n",
+      "   5.70000e-01]]\n"
+     ]
+    }
+   ],
    "source": [
     "X = numpy.loadtxt(\"X.csv\", delimiter=\",\")\n",
-    "Y = numpy.loadtxt(\"Y.csv\", delimiter=\",\")\n"
+    "Y = numpy.loadtxt(\"Y.csv\", delimiter=\",\")\n",
+    "print(X)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[       nan        nan        nan ... 0.59907967 0.70967742 0.94      ]\n",
+      " [       nan        nan        nan ... 0.59907967 0.70967742 0.94      ]\n",
+      " [       nan        nan        nan ... 0.59994918 0.70967742 0.94      ]\n",
+      " ...\n",
+      " [       nan        nan        nan ... 0.99919259 0.68817204 0.57      ]\n",
+      " [       nan        nan        nan ... 0.99839083 0.68817204 0.57      ]\n",
+      " [       nan        nan        nan ... 0.99919259 0.68817204 0.57      ]]\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -48,7 +90,9 @@
     "    X[:,cont] = (X[:,cont]/(X[:,cont].max()))\n",
     "    \n",
     "for cont in range(12):\n",
-    "    Y[:,cont] = (Y[:,cont]/(Y[:,cont].max()))\n"
+    "    Y[:,cont] = (Y[:,cont]/(Y[:,cont].max()))\n",
+    "\n",
+    "print(X)"
    ]
   },
   {
@@ -197,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
