--- a/Challenge 1 - Tensorflow/neural network.ipynb
+++ b/Challenge 1 - Tensorflow/neural network.ipynb
@@ -2,32 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import keras as kr\n",
-    "\n",
-    "from keras.models import Sequential\n",
-    "from keras.layers import Dense\n",
+    "import tensorflow as tf\n",
     "\n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -1491,7 +1480,7 @@
        "[17379 rows x 17 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1535,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 62,
    "metadata": {
     "scrolled": true
    },
@@ -1544,13 +1533,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.24   0.2879 0.81   0.    ]\n",
-      " [0.22   0.2727 0.8    0.    ]\n",
-      " [0.22   0.2727 0.8    0.    ]\n",
+      "[[ 0.2879  0.81    0.      3.     13.    ]\n",
+      " [ 0.2727  0.8     0.      8.     32.    ]\n",
+      " [ 0.2727  0.8     0.      5.     27.    ]\n",
       " ...\n",
-      " [0.26   0.2576 0.6    0.1642]\n",
-      " [0.26   0.2727 0.56   0.1343]\n",
-      " [0.26   0.2727 0.65   0.1343]]\n"
+      " [ 0.2576  0.6     0.1642  7.     83.    ]\n",
+      " [ 0.2727  0.56    0.1343 13.     48.    ]\n",
+      " [ 0.2727  0.65    0.1343 12.     37.    ]]\n"
      ]
     }
    ],
@@ -1560,7 +1549,7 @@
     "\n",
     "# np.random.shuffle(bikes)\n",
     "\n",
-    "X = bikes[1:,10:14]\n",
+    "X = bikes[1:,11:16]\n",
     "Y = bikes[1:,16:17]\n",
     "\n",
     "print(X)"
@@ -1568,20 +1557,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.24       0.2879     0.81       0.        ]\n",
-      " [0.22       0.2727     0.8        0.        ]\n",
-      " [0.22       0.2727     0.8        0.        ]\n",
+      "[[0.28787121 0.809919   0.         0.00817357 0.01467122]\n",
+      " [0.27267273 0.79992    0.         0.02179619 0.03611377]\n",
+      " [0.27267273 0.79992    0.         0.01362262 0.03047099]\n",
       " ...\n",
-      " [0.26       0.2576     0.6        0.19301751]\n",
-      " [0.26       0.2727     0.56       0.15786999]\n",
-      " [0.26       0.2727     0.65       0.15786999]]\n"
+      " [0.25757424 0.59994    0.19299821 0.01907166 0.09367009]\n",
+      " [0.27267273 0.559944   0.1578542  0.0354188  0.05417065]\n",
+      " [0.27267273 0.649935   0.1578542  0.03269428 0.04175655]]\n"
      ]
     }
    ],
@@ -1592,78 +1581,60 @@
     "Xn = X\n",
     "\n",
     "\n",
-    "for cont in range(4):\n",
-    "    Xn[:,cont] = (Xn[:,cont]/(Xn[:,cont].max()))\n",
+    "for cont in range(5):\n",
+    "    Xn[:,cont] = (Xn[:,cont]/(Xn[:,cont].max()))*.9999\n",
     "    \n",
     "print(Xn)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.01637666]\n",
-      " [0.04094166]\n",
-      " [0.03275333]\n",
+      "[[0.01637503]\n",
+      " [0.04093756]\n",
+      " [0.03275005]\n",
       " ...\n",
-      " [0.09211873]\n",
-      " [0.06243603]\n",
-      " [0.05015353]]\n"
+      " [0.09210952]\n",
+      " [0.06242979]\n",
+      " [0.05014852]]\n"
      ]
     }
    ],
    "source": [
-    "Yn = Y/Y.max()\n",
+    "Yn = Y/Y.max()*.9999\n",
     "print(Yn)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
+   "execution_count": 91,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "model = Sequential()\n",
-    "model.add(Dense(8, input_dim=4, activation='relu'))\n",
-    "model.add(Dense(8, activation='relu'))\n",
-    "model.add(Dense(1, activation='sigmoid'))"
+    "model = tf.keras.models.Sequential([\n",
+    "  tf.keras.layers.Flatten(),\n",
+    "  tf.keras.layers.Dense(6, activation=tf.nn.sigmoid),\n",
+    "  tf.keras.layers.Dense(20, activation=tf.nn.sigmoid),\n",
+    "  tf.keras.layers.Dense(1, activation=tf.nn.sigmoid)\n",
+    "])\n",
+    "model.compile(optimizer='adam',\n",
+    "              loss='binary_crossentropy',\n",
+    "              metrics=['accuracy'],\n",
+    "             shuffle=True)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Unknown optimizer: SGM",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-42-a2dd551e5e5b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m model.compile(loss='binary_crossentropy',\n\u001b[0;32m      2\u001b[0m             \u001b[0moptimizer\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'SGM'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m             metrics=['accuracy'])\n\u001b[0m",
-      "\u001b[1;32mc:\\users\\edfmg\\appdata\\local\\programs\\python\\python35\\lib\\site-packages\\keras\\engine\\training.py\u001b[0m in \u001b[0;36mcompile\u001b[1;34m(self, optimizer, loss, metrics, loss_weights, sample_weight_mode, weighted_metrics, target_tensors, **kwargs)\u001b[0m\n\u001b[0;32m     94\u001b[0m                 \u001b[0;31m`\u001b[0m\u001b[0moptimizer\u001b[0m\u001b[0;31m`\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0mloss\u001b[0m\u001b[0;31m`\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0mmetrics\u001b[0m\u001b[0;31m`\u001b[0m \u001b[1;32mor\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0msample_weight_mode\u001b[0m\u001b[0;31m`\u001b[0m\u001b[1;33m.\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     95\u001b[0m         \"\"\"\n\u001b[1;32m---> 96\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptimizer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0moptimizers\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moptimizer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     97\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mloss\u001b[0m \u001b[1;32mor\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     98\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmetrics\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmetrics\u001b[0m \u001b[1;32mor\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\users\\edfmg\\appdata\\local\\programs\\python\\python35\\lib\\site-packages\\keras\\optimizers.py\u001b[0m in \u001b[0;36mget\u001b[1;34m(identifier)\u001b[0m\n\u001b[0;32m    786\u001b[0m     \u001b[1;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0midentifier\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msix\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstring_types\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    787\u001b[0m         \u001b[0mconfig\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;34m'class_name'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0midentifier\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'config'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 788\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mdeserialize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mconfig\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    789\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0midentifier\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mOptimizer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    790\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0midentifier\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\users\\edfmg\\appdata\\local\\programs\\python\\python35\\lib\\site-packages\\keras\\optimizers.py\u001b[0m in \u001b[0;36mdeserialize\u001b[1;34m(config, custom_objects)\u001b[0m\n\u001b[0;32m    758\u001b[0m                                     \u001b[0mmodule_objects\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mall_classes\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    759\u001b[0m                                     \u001b[0mcustom_objects\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcustom_objects\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 760\u001b[1;33m                                     printable_module_name='optimizer')\n\u001b[0m\u001b[0;32m    761\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    762\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\users\\edfmg\\appdata\\local\\programs\\python\\python35\\lib\\site-packages\\keras\\utils\\generic_utils.py\u001b[0m in \u001b[0;36mdeserialize_keras_object\u001b[1;34m(identifier, module_objects, custom_objects, printable_module_name)\u001b[0m\n\u001b[0;32m    136\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mcls\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    137\u001b[0m                 raise ValueError('Unknown ' + printable_module_name +\n\u001b[1;32m--> 138\u001b[1;33m                                  ': ' + class_name)\n\u001b[0m\u001b[0;32m    139\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcls\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'from_config'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    140\u001b[0m             \u001b[0mcustom_objects\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcustom_objects\u001b[0m \u001b[1;32mor\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: Unknown optimizer: SGM"
-     ]
-    }
-   ],
-   "source": [
-    "model.compile(loss='binary_crossentropy',\n",
-    "            optimizer='SGM',\n",
-    "            metrics=['accuracy'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 92,
    "metadata": {
     "scrolled": true
    },
@@ -1672,54 +1643,107 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5\n",
-      "170/170 [==============================] - 2s 15ms/step - loss: 0.4711 - acc: 0.0000e+00\n",
-      "Epoch 2/5\n",
-      "170/170 [==============================] - 2s 15ms/step - loss: 0.4652 - acc: 0.0000e+00\n",
-      "Epoch 3/5\n",
-      "170/170 [==============================] - 2s 14ms/step - loss: 0.4633 - acc: 0.0000e+00\n",
-      "Epoch 4/5\n",
-      "170/170 [==============================] - 2s 14ms/step - loss: 0.4629 - acc: 0.0000e+00\n",
-      "Epoch 5/5\n",
-      "170/170 [==============================] - 2s 14ms/step - loss: 0.4629 - acc: 0.0000e+00\n"
+      "Epoch 1/10\n",
+      "17379/17379 [==============================] - 2s 137us/step - loss: 0.5490 - acc: 0.0000e+00\n",
+      "Epoch 2/10\n",
+      "17379/17379 [==============================] - 1s 40us/step - loss: 0.4749 - acc: 0.0000e+00\n",
+      "Epoch 3/10\n",
+      "17379/17379 [==============================] - 1s 39us/step - loss: 0.4455 - acc: 0.0000e+00\n",
+      "Epoch 4/10\n",
+      "17379/17379 [==============================] - 1s 39us/step - loss: 0.4088 - acc: 0.0000e+00\n",
+      "Epoch 5/10\n",
+      "17379/17379 [==============================] - 1s 40us/step - loss: 0.3945 - acc: 0.0000e+00\n",
+      "Epoch 6/10\n",
+      "17379/17379 [==============================] - 1s 41us/step - loss: 0.3905 - acc: 0.0000e+00\n",
+      "Epoch 7/10\n",
+      "17379/17379 [==============================] - 1s 41us/step - loss: 0.3885 - acc: 0.0000e+00\n",
+      "Epoch 8/10\n",
+      "17379/17379 [==============================] - 1s 40us/step - loss: 0.3876 - acc: 0.0000e+00\n",
+      "Epoch 9/10\n",
+      "17379/17379 [==============================] - 1s 42us/step - loss: 0.3871 - acc: 0.0000e+00\n",
+      "Epoch 10/10\n",
+      "17379/17379 [==============================] - 1s 41us/step - loss: 0.3868 - acc: 0.0000e+00\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x1e5c3301a58>"
+       "<tensorflow.python.keras.callbacks.History at 0x223cd440278>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.fit(Xn,\n",
-    "          Yn,\n",
-    "          epochs=5,\n",
-    "          steps_per_epoch=170)"
+    "model.fit(Xn, Yn, epochs=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17379/17379 [==============================] - 2s 91us/step\n",
-      "\n",
-      "acc: 0.00%\n"
+      "17379/17379 [==============================] - 0s 18us/step\n",
+      "[0.38175303017344064, 0.0]\n"
      ]
     }
    ],
    "source": [
     "scores = model.evaluate(Xn, Yn)\n",
-    "print(\"\\n%s: %.2f%%\" % (model.metrics_names[1], scores[1]*100))"
+    "print(scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.0138977 ]\n",
+      " [0.04108492]\n",
+      " [0.03122451]\n",
+      " ...\n",
+      " [0.09392177]\n",
+      " [0.06535389]\n",
+      " [0.05205068]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores = model.predict(Xn)\n",
+    "print(scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.01637503]\n",
+      " [0.04093756]\n",
+      " [0.03275005]\n",
+      " ...\n",
+      " [0.09210952]\n",
+      " [0.06242979]\n",
+      " [0.05014852]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Yn)"
    ]
   }
  ],
