--- a/Red-Neural-TensorFlow/Red-Neural.ipynb
+++ b/Red-Neural-TensorFlow/Red-Neural.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,35 +11,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n",
-      "100\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Ejercicio a\n",
+    "#placeholder\n",
+    "x_data = tf.placeholder(shape=[None,2],dtype=tf.float32)\n",
+    "y_data = tf.placeholder(shape=[None,1],dtype=tf.float32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "W1 = tf.Variable(tf.random_normal(shape=[2,3]))\n",
+    "b1 = tf.Variable(tf.random_normal(shape=[3]))\n",
+    "a1 = tf.nn.relu(tf.add(tf.matmul(x_data,W1),b1))\n",
+    "hidden_1 = tf.sigmoid(a1)\n",
     "\n",
-    "graph = tf.Graph()\n",
+    "W2 = tf.Variable(tf.random_normal(shape=[3,1]))\n",
+    "b2 = tf.Variable(tf.random_normal(shape=[1]))\n",
+    "a2 = tf.nn.relu(tf.add(tf.matmul(hidden_1,W2),b2))\n",
+    "output = tf.sigmoid(a2)\n",
     "\n",
-    "with graph.as_default():\n",
-    "    x = tf.placeholder(tf.float32, shape=[])\n",
-    "    z2 = tf.tensordot(x,w1)\n",
-    "    a2 = tf.sigmoid(z2)\n",
-    "    z3 = tf.tensordot(a2,w2)\n",
-    "    yhat = tf.sigmoid(z3)\n",
+    "loss = tf.reduce_mean(tf.square(y_data - output))\n",
+    "\n",
+    "optimizer = tf.train.GradientDescentOptimizer(0.005)\n",
+    "train_step = optimizer.minimize(loss)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batchSize = 50\n",
+    "with tf.Session() as sess:\n",
+    "    #Initialize variables\n",
     "    init = tf.global_variables_initializer()\n",
-    "\n",
-    "with tf.Session(graph=graph):\n",
-    "    init.run()   \n",
-    "    sec.eval(feed_dict={x: 10.})\n",
-    "    print(res.eval())"
+    "    sess.run(init)\n",
+    "    \n",
+    "    train_loss =[]\n",
+    "    test_loss = []"
    ]
   }
  ],
@@ -59,7 +75,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
